# example-claude-threads

./: .gitignore  README.md  pyproject.toml
.claude/agents/: code-reviewer.md  explorer.md  issue-fixer.md  pr-manager.md  security-reviewer.md  story-developer.md  test-writer.md  thread-orchestrator.md
.claude/commands/: bmad.md  ct-connect.md  ct-spawn.md  threads.md
.claude/skills/bmad-autopilot/: SKILL.md
.claude/skills/thread-orchestrator/: SKILL.md
docs/: REQUIREMENTS.md
integration-tests/: run-all.sh  test-01-thread-lifecycle.sh  test-02-parallel-threads.sh  test-03-blackboard-events.sh  test-04-thread-communication.sh  test-05-concurrent-db-access.sh  test-06-delayed-processing.sh  test-07-state-transitions.sh  test-08-stress-test.sh
prompts/: add-subtraction.md  add-tests.md  code-review.md  implement-feature.md
scenarios/: 01-simple-task.sh  02-multi-thread.sh  03-orchestrator.sh  04-worktree-isolation.sh  05-pr-shepherd.sh  06-remote-connection.sh  07-blackboard-events.sh  08-bmad-workflow.sh  09-epic-parallel.sh  10-full-pipeline.sh
src/: __init__.py  calculator.py
tests/: test_calculator.py
